<resources>
    <string name="app_name">FFChar Application</string>
    <string name="game_menu">FFChar Main Menu</string>
    <string name="menu_play">Start Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="equip_title">Equipment</string>
    <string name="equip_weapon">Weapon</string>
    <string name="equip_chest">Chest</string>
    <string name="equip_legs">Leg Armour</string>
    <string name="equip_acc">Accessory</string>

</resources>
