<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/inv_titleText"
        android:layout_toEndOf="@+id/relativeLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout2"
                android:gravity="top"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@android:color/darker_gray">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView"
                    android:src="@drawable/inv_bag"
                    android:background="#00000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout2"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:gravity="top|bottom"
                android:background="@android:color/darker_gray">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/weaponSpinner"
                    style="@android:style/Widget.Spinner.DropDown"
                    android:layout_above="@+id/spinner"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp" />

                <Spinner
                    style="@android:style/Widget.Spinner.DropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/spinner"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="7dp" />

                <Spinner
                    style="@android:style/Widget.Spinner.DropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/spinner2"
                    android:layout_below="@+id/spinner"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="7dp" />

                <Spinner
                    style="@android:style/Widget.Spinner.DropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/spinner3"
                    android:layout_below="@+id/spinner2"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="7dp" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inv_titleText"
        android:layout_toStartOf="@+id/inv_titleText"
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/equip_weapon"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="185dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/equip_chest"
            android:id="@+id/textView2"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/equip_legs"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/equip_acc"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:text="@string/equip_title"
        android:id="@+id/inv_titleText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

</RelativeLayout>